# matplotlib_BTC

./: main.py  pyproject.toml
notebooks/: Bitcoin_history_data.csv  matplotlib_lb.ipynb
notebooks/.ipynb_checkpoints/: matplotlib_lb-checkpoint.ipynb
notebooks/opencv_lb/.ipynb_checkpoints/: opencv_lb-checkpoint.ipynb
